@@ -105,8 +105,10 @@ For such a small piece of software, there are plenty of mailing lists
 available.
 
 <ul>
-<li><tt>libffi-announce</tt> is a low volume mailing list for libffi release announcements
-<li><tt>libffi-discuss</tt> is a mailing list for asking questions, reporting bugs, etc.
+<li><a href="/ml/libffi-announce/"><tt>libffi-announce</tt></a> is a 
+    low volume mailing list for libffi release announcements
+<li><a href="/ml/libffi-discuss/"><tt>libffi-discuss</tt></a> is a 
+    mailing list for asking questions, reporting bugs, etc.
 </ul>
 
 <p>To subscribe to the <code>libffi-announce</code> mailing list, enter your
